On affiche pas les utilisateurs qui n'ont pas de réservations lors du filtre sur les trimestres ou année dans Historique

--- a/GestionPlacesParking/Pages/Customs/HistoryV2.cshtml
+++ b/GestionPlacesParking/Pages/Customs/HistoryV2.cshtml
@@ -103,7 +103,7 @@ else
                 //On ajoute les subrows sur l'utilisateur
                 @foreach (var historyUserLocal in Model.HistoryLocal.HistoryUserLocalList)
                 {
-                    @if (!string.IsNullOrEmpty(historyUserLocal.ReservingName))
+                    @if (!string.IsNullOrEmpty(historyUserLocal.ReservingName) && historyUserLocal.NbTotalReservations > 0)
                     {
                         bool findHistoryMonth = false;
 
